--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
 
             <h2 class="section-title">高分影视剧（电影/电视剧）</h2>
             <div class="cards-grid">
-                <a href="https://url19.ctfile.com/d/167219-4321919-340be3?p=630453" class="card">
+                <a href="https://www.kdocs.cn/l/ckGWZcMq8Xcg" class="card">
                     <div class="card-content">【华语电影】</div>
                     <div class="icon"><i class="fas fa-compact-disc"></i></div>
                 </a>
